# AM4-Fuel-CO2-Prices

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
deploy/: .env.example  Dockerfile  docker-compose.yml
docs/: architecture.md  operations.md
src/am4bot/: __init__.py  __main__.py  bot.py  config.py  models.py  store.py
src/am4bot/adapters/: am4help.py  base.py  factory.py  mgtools.py  mock_replay.py  null.py
src/am4bot/cogs/: _commodity.py  admin.py  co2.py  fuel.py  poller.py
src/am4bot/ui/: embeds.py
